<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="For_safety_concerns_you_re_not_allowed_to_sign_in_for_now">"For safety concerns, you're not allowed to sign in for now. If you need any help, please feel free to contact us."</string>
    <string name="_100__ad_free_reliable_connection">"100% AD-free
Reliable اتصلion"</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_title">Shadowsocks %s</string>
    <string name="about_us_check_for_update">Check for Updates</string>
    <string name="ac_fb_email" />
    <string name="ac_vip_fb_email">turbovpn-vipsupport@inconnecting.com</string>
    <string name="account_deletion">Delete Account</string>
    <string name="account_supported_systems">Mac, Android, Chrome…</string>
    <string name="account_user_id">User ID</string>
    <string name="acl_rule_online_config">URL to online config</string>
    <string name="acl_rule_templates_domain">Domain name and all its subdomain names</string>
    <string name="acl_rule_templates_generic">Subnet or Hostname PCRE pattern</string>
    <string name="action_add_rule">Add rule(s)…</string>
    <string name="action_apply_all">Apply Settings to All Profiles</string>
    <string name="action_export">Export to Clipboard</string>
    <string name="action_export_err">Failed to export.</string>
    <string name="action_export_file">Export to file…</string>
    <string name="action_export_more">Export…</string>
    <string name="action_export_msg">Successfully export!</string>
    <string name="action_import">Import from Clipboard</string>
    <string name="action_import_err">Failed to import.</string>
    <string name="action_import_file">Import from file…</string>
    <string name="action_import_msg">Successfully import!</string>
    <string name="action_repair">Repair</string>
    <string name="action_replace_file">Replace from file…</string>
    <string name="action_settings">Settings</string>
    <string name="actions_required">Actions required</string>
    <string name="active_sub1_after_month">Then %s/month</string>
    <string name="active_sub1_desc">No Commitment, Cancel Anytime</string>
    <string name="active_sub1_fist_month">%s/mon for first 3 months</string>
    <string name="active_sub2_introduct" formatted="false">First month %1s, then %2s/month</string>
    <string name="ad_mob_ad_badge">Ad</string>
    <string name="ad_units">Ad Units</string>
    <string name="add_dns_step_1_desc">"Copy a DNS address listed as following for the streaming service you'd like to optimize."</string>
    <string name="add_dns_step_2_desc">Go to Settings > WLAN, and click the cog icon of your Current Network.</string>
    <string name="add_dns_step_2_desc_huawei">Go to Settings > WLAN, and check اتصلed Network.</string>
    <string name="add_dns_step_2_desc_pixel">Go to Settings > Internet, and click the cog icon of your Current Network.</string>
    <string name="add_dns_step_2_desc_samsung">Go to Settings > Wi-Fi and click into your Current Network.</string>
    <string name="add_dns_step_3_desc">Scroll down to IP Settings and change to Static.</string>
    <string name="add_dns_step_3_desc_huawei">Long press اتصلed Network, and click Modify network.</string>
    <string name="add_dns_step_3_desc_pixel">Click Edit and open Advanced options.</string>
    <string name="add_dns_step_3_desc_samsung">Open Advanced Settings.</string>
    <string name="add_dns_step_4_desc">In the DNS 1 fields that appeared, paste the DNS address you copy just then, and Save.</string>
    <string name="add_dns_step_4_desc_pixel">Change IP Settings to Static.</string>
    <string name="add_dns_step_5_desc">افصل from the network, and reconnect for the changes to take effect.</string>
    <string name="add_dns_step_5_desc_huawei">In the DNS 1 fields that appeared, paste the DNS address you copy just then, and click Save.</string>
    <string name="add_dns_step_5_desc_pixel">Scroll down to DNS. In the DNS 1 fields that appeared, paste the DNS address you copy just then, and click Save.</string>
    <string name="add_profile">Add Profile</string>
    <string name="add_profile_dialog">Add this Shadowsocks Profile?</string>
    <string name="add_profile_methods_manual_settings">Manual Settings</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
    <string name="add_profile_scanner_permission_required">Camera permission is required for scanning QR code.</string>
    <string name="add_smart_dns_server">Add Smart DNS Server</string>
    <string name="adjust_app_token">yg3zpc1ih2bk</string>
    <string name="adjust_connect_succ_token" />
    <string name="adjust_first_purchase_token">nlz3pa</string>
    <string name="adjust_first_subscribe_token">djjyvb</string>
    <string name="adjust_meta_install_referer_id">725281170045038</string>
    <string name="adjust_second_day_retention_token">q6ojxi</string>
    <string name="ads_sdk_version">SDK Version</string>
    <string name="advertisement_network_settings">Advertisement Network Settings</string>
    <string name="after_completed_actions">"After you've completed the actions above"</string>
    <string name="after_deleting_it_all_of_your">After deleting it, all of your devices will be signed out at once.</string>
    <string name="after_deleting_these_devices">After deleting these devices, they will be signed out and miss Premium Plan at once.</string>
    <string name="after_deleting_this_device">After deleting this device, it will be signed out and lose %s at once.</string>
    <string name="after_deleting_this_device_miss">After deleting this device, it will be signed out and miss Premium Plan at once.</string>
    <string name="after_deleting_your_current_device">After deleting your current device, you will be signed out and lose %s at once.</string>
    <string name="age_restricted_user">Age Restricted User</string>
    <string name="agree_connect_now">Start Now</string>
    <string name="agree_continue">Agree &amp; Continue</string>
    <string name="ak_app_id" />
    <string name="ak_path_key" />
    <string name="ak_publisher_id" />
    <string name="ak_token" />
    <string name="all_apps_do_not_run_through_encrypted_vpn_connection">All apps DO NOT run through encrypted VPN connection. You can exclude any app by tapping the switch aside.</string>
    <string name="apps_using_vpn">Split Tunnelling</string>
    <string name="cancel">cancel</string>
    <string name="continue_to_change">Continue to Change?</string>
    <string name="desktop">Desktop</string>
    <string name="dlg_continue">Continue</string>
    <string name="email">Email</string>
    <string name="email_feedback_auto_disconnect">Auto disconnect</string>
    <string name="email_feedback_cannot_connect">"Can't connect"</string>
    <string name="email_feedback_more_server">Need more server locations</string>
    <string name="email_feedback_others">Others</string>
    <string name="email_feedback_slow_speed">Slow speed</string>
    <string name="email_feedback_stream_videos">Netflix/Hotstar/Streaming</string>
    <string name="email_feedback_subscription">Subscription/Payment</string>
    <string name="fd_Description">Description</string>
    <string name="fd_bottom_desc">**Your privacy is our top priority. These feedback do not contain any personally identifiable information.</string>
    <string name="fd_desc_hits">Please describe your issue in detail.</string>
    <string name="fd_email_hits">Your email address</string>
    <string name="fd_submit_title">Submit Feedback</string>
    <string name="fd_website_hits">Example: google.com</string>
    <string name="feedback_auto_disconnect">Auto disconnect</string>
    <string name="feedback_cannot_connect">"Can't connect"</string>
    <string name="feedback_description">What would you like us to improve?</string>
    <string name="feedback_more_server">Need more server locations</string>
    <string name="feedback_others">Others</string>
    <string name="feedback_slow_speed">Slow speed</string>
    <string name="feedback_stream_videos">Netflix/Hotstar/Streaming</string>
    <string name="feedback_subscription">Subscription/Payment</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="invalid_desc">Please describe the issue in detail. We need more information to check it.</string>
    <string name="key_allow_log">use_allow_log</string>
    <string name="key_push_token">push_token</string>
    <string name="key_test_ad_app_id">test_ad_app_id</string>
    <string name="key_use_debug_config">use_debug_config</string>
    <string name="my_account">My Account</string>
    <string name="server_location">Server Location</string>
    <string name="settings_about_only">About</string>
    <string name="settings_ratings">Rate</string>
    <string name="settings_title">Settings</string>
    <string name="smart_dns_view_desc">"Smart DNS is a versatile DNS service that allows you to optimize streaming services such as Netflix, Hotstar, Hulu, BBC iPlayer, HBO and many others. It works on any device and is fast than VPN. 

All Smart DNS servers are encrypted and protected. There are no logs, so all traffic and data remain anonymous. Simply change your DNS IP address on the device you are using by replacing it with a Smart DNS proxy IP address."</string>
    <string name="speed_test2">Speed Test</string>
    <string name="submit">submit</string>
    <string name="tp_close_video">Close Video?</string>
    <string name="tp_close_video1">Close Video</string>
    <string name="tp_keep_play">Keep Watching</string>
    <string name="tp_lost_reward">"You'll miss out on the reward"</string>
    <string name="txt_got_it">Got it</string>
    <string name="vip_text_premium_plan">Premium Plan</string>
    <string name="website_filter">Website Filter</string>
    <string name="website_name">Website Name</string>
    <string name="website_reconnect_tip">After changing Website Filter option, you need to reconnect VPN.</string>
    <string name="what_smart_dns">What’s Smart DNS?</string>
</resources>