<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/v_status_bar" android:background="@color/color_main_status_bar" android:layout_width="match_parent" android:layout_height="@dimen/dp_0_1" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:layout_width="match_parent" android:layout_height="@dimen/toolbar_height" app:layout_constraintTop_toBottomOf="@id/v_status_bar" style="@style/Widget.Turbo.Toolbar" />
    <ScrollView android:layout_width="match_parent" android:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_fb_root" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="0.0dp" android:paddingEnd="0.0dp">
            <TextView android:enabled="false" android:textSize="0.0sp" android:textStyle="bold" android:textColor="@color/color_333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/feedback_description" />
            <TextView android:textSize="0.0sp" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/textViewConnect" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/feedback_cannot_connect" android:drawablePadding="0.0dp" android:contentDescription="@string/email_feedback_cannot_connect" android:layout_marginEnd="0.0dp" app:drawableEndCompat="@drawable/ic_item_expand_more" app:drawableStartCompat="@drawable/ic_fd_connect" />
            <View android:background="@color/color_eaeaea" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginStart="0.0dp" />
            <TextView android:textSize="0.0sp" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/textViewSlow" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback_slow_speed" android:drawablePadding="0.0dp" android:contentDescription="@string/email_feedback_slow_speed" android:layout_marginEnd="0.0dp" app:drawableEndCompat="@drawable/ic_item_expand_more" app:drawableStartCompat="@drawable/ic_fd_slow" />
            <View android:background="@color/color_eaeaea" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginStart="0.0dp" />
            <TextView android:textSize="0.0sp" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/textViewDisconnect" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback_auto_disconnect" android:drawablePadding="0.0dp" android:contentDescription="@string/email_feedback_auto_disconnect" android:layout_marginEnd="0.0dp" app:drawableEndCompat="@drawable/ic_item_expand_more" app:drawableStartCompat="@drawable/ic_fd_disconnect" />
            <View android:background="@color/color_eaeaea" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginStart="0.0dp" />
            <TextView android:textSize="0.0sp" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/textViewStream" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback_stream_videos" android:drawablePadding="0.0dp" android:contentDescription="@string/email_feedback_stream_videos" android:layout_marginEnd="0.0dp" app:drawableEndCompat="@drawable/ic_item_expand_more" app:drawableStartCompat="@drawable/ic_fd_netflix" />
            <View android:background="@color/color_eaeaea" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginStart="0.0dp" />
            <TextView android:textSize="0.0sp" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/textViewSubcription" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback_subscription" android:drawablePadding="0.0dp" android:contentDescription="@string/email_feedback_subscription" android:layout_marginEnd="0.0dp" app:drawableEndCompat="@drawable/ic_item_expand_more" app:drawableStartCompat="@drawable/ic_fd_subscription" />
            <View android:background="@color/color_eaeaea" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginStart="0.0dp" />
            <TextView android:textSize="0.0sp" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/textViewMoreServer" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback_more_server" android:drawablePadding="0.0dp" android:contentDescription="@string/email_feedback_more_server" android:layout_marginEnd="0.0dp" app:drawableEndCompat="@drawable/ic_item_expand_more" app:drawableStartCompat="@drawable/ic_fd_server" />
            <View android:background="@color/color_eaeaea" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginStart="0.0dp" />
            <TextView android:textSize="0.0sp" android:textColor="@color/color_333333" android:gravity="center_vertical" android:id="@id/textViewOthers" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback_others" android:drawablePadding="0.0dp" android:contentDescription="@string/email_feedback_others" android:layout_marginEnd="0.0dp" app:drawableEndCompat="@drawable/ic_item_expand_more" app:drawableStartCompat="@drawable/ic_fd_others" />
            <View android:background="@color/color_eaeaea" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginStart="0.0dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
