<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/v_status_bar" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="@dimen/dp_0_1" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="@color/color_white" android:layout_width="match_parent" android:layout_height="@dimen/toolbar_height" android:layout_below="@id/v_status_bar" app:navigationIcon="@drawable/ic_back" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:title="@string/fd_submit_title" app:titleTextColor="@color/black" />
    <TextView android:textSize="@dimen/agree_main_text_size" android:textStyle="bold" android:textColor="@color/black" android:ellipsize="end" android:id="@id/tv_subject" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:maxLines="2" android:layout_below="@id/toolbar" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <TextView android:textSize="@dimen/account_tips_text" android:textColor="@color/colorError" android:gravity="start" android:id="@id/tv_email_action_tips" android:background="@color/colorerrbg" android:paddingLeft="0.0dp" android:paddingTop="0.0dp" android:paddingRight="0.0dp" android:paddingBottom="0.0dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/invalid_desc" android:layout_below="@id/toolbar" />
    <TextView android:textSize="@dimen/agree_main_text_size" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/email" android:layout_below="@id/tv_email_action_tips" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <EditText android:textSize="@dimen/account_main_text" android:textColor="@color/colorSignMain" android:textColorHint="@color/colorTips" android:id="@id/et_email" android:background="@drawable/bg_fd_desc_selector" android:paddingTop="0.0dp" android:layout_width="match_parent" android:layout_height="@dimen/base_btn_height" android:layout_marginTop="0.0dp" android:hint="@string/fd_email_hits" android:singleLine="true" android:layout_below="@id/tv_email" android:inputType="textEmailAddress" android:imeOptions="actionNext" android:textAlignment="viewStart" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <TextView android:textSize="@dimen/agree_main_text_size" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_website" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/website_name" android:layout_below="@id/et_email" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <EditText android:textSize="@dimen/account_main_text" android:textColor="@color/colorSignMain" android:textColorHint="@color/colorTips" android:id="@id/et_website" android:background="@drawable/bg_fd_desc_selector" android:paddingTop="0.0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/base_btn_height" android:layout_marginTop="0.0dp" android:hint="@string/fd_website_hits" android:singleLine="true" android:layout_below="@id/tv_website" android:imeOptions="actionNext" android:textAlignment="viewStart" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <TextView android:textSize="@dimen/agree_main_text_size" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/fd_Description" android:layout_below="@id/et_website" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <EditText android:textSize="@dimen/account_main_text" android:textColor="@color/colorSignMain" android:textColorHint="@color/colorTips" android:gravity="start|top" android:id="@id/et_desc" android:background="@drawable/bg_fd_desc_selector" android:paddingTop="0.0dp" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginTop="0.0dp" android:hint="@string/fd_desc_hits" android:minLines="5" android:layout_below="@id/tv_desc" android:inputType="textMultiLine" android:imeOptions="actionNext" android:textAlignment="viewStart" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <TextView android:textSize="@dimen/agree_desc_text_size" android:textColor="@color/black" android:id="@id/tv_bottom_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dp" android:text="@string/fd_bottom_desc" android:maxLines="2" android:layout_above="@id/btn_submit" android:textAlignment="center" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <TextView android:textSize="0.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:gravity="center" android:id="@id/btn_submit" android:background="@drawable/bg_submit_btn" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginBottom="0.0dp" android:text="@string/submit" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAllCaps="true" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
</RelativeLayout>
