<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_dlg" android:background="@drawable/rounded_white_6" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="0.0sp" android:textStyle="bold" android:textColor="@color/color_222222" android:id="@id/tv_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/continue_to_change" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textColor="@color/color_666666" android:id="@id/tv_msg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/website_reconnect_tip" android:lineSpacingMultiplier="1.3" app:layout_constraintTop_toBottomOf="@id/tv_title" />
    <TextView android:textStyle="bold" android:textColor="@color/color_fa7a48" android:id="@id/tv_ok" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/dlg_continue" android:textAllCaps="true" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_msg" />
    <TextView android:textStyle="bold" android:textColor="@color/color_bbbbbb" android:id="@id/tv_cancel" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:textAllCaps="true" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" app:layout_constraintEnd_toStartOf="@id/tv_ok" app:layout_constraintTop_toTopOf="@id/tv_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>
