<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/shape_white_r12" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="0.0sp" android:textStyle="bold" android:textColor="@color/color_222222" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/what_smart_dns" android:textDirection="locale" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:src="@drawable/smart_dns_stream_dlg" />
    <TextView android:textSize="0.0sp" android:textColor="@color/color_222222" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/smart_dns_view_desc" android:textDirection="locale" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
    <TextView android:textSize="0.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/iv_more_close" android:background="@drawable/shape_fa7a48_r28" android:paddingTop="0.0dp" android:paddingBottom="0.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:text="@string/txt_got_it" android:textDirection="locale" android:layout_marginStart="0.0dp" android:layout_marginEnd="0.0dp" />
</LinearLayout>
